<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.nayir.musicapp.Search">

    <TextView
        style="@style/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Search" />

    <TextView
        style="@style/cont"
        android:background="@color/material_deep_teal_200"
        android:text="@string/descriptsearch" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn1sea"
            style="@style/btn"
            android:text="@string/main" />

        <Button
            android:id="@+id/btn2sea"
            style="@style/btn"
            android:text="@string/Nowplaying" />

        <Button
            android:id="@+id/btn3sea"
            style="@style/btn"
            android:text="@string/Store" />
    </LinearLayout>
</LinearLayout>
